GPU: embiggen the Ganesh resource cache count for Skia.

Some content is bumping up against this limit, and hitting some nasty
performance cliffs.

BUG=687547
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2691363003
Cr-Commit-Position: refs/heads/master@{#450977}

Former-commit-id: 01849a55d8dd890c34e2a3cbf3382cff0ac2d258